# python-c-cpp

./: .gitignore  README.md
1. Basic C library usage/: CMakeLists.txt  README.md  demo.py  greeting.c  greeting.h  main.c  spam.py  spamlib.c  spamlib.h
10. Conversion/: CMakeLists.txt  conversion.cpp  demo.py  example.h  main.cpp
11. Polymorphism/: CMakeLists.txt  demo.py  example.cpp  example.h  main.cpp  polymorphism.cpp
2. C library with callback/: demo.py  greeting.c  greeting.h  main.c
2. Manually created extension module/: CMakeLists.txt  README.md  main.c  spamlib.c  spamlib.h  spammodule.c
3-1. SWIG-generated extension module/: CMakeLists.txt  main.cpp  spam.i
3-2. PyBind11-generated extension module/: CMakeLists.txt  demo.py  spam.cpp
3. SWIG-generated extension module/: CMakeLists.txt  demo.py  spam.i  spamlib.cpp  spamlib.h
4. Using a C++ class in Python/: CMakeLists.txt  demo.py  light.cpp  light.h  light_interface.cpp  light_interface.h  main.cpp  spam.i  traffic.cpp  traffic_light.cpp  traffic_light.h  traffic_light_interface.h  trafficlight.i
99. Playground/: CMakeLists.txt  demo.py  example.cpp  main.cpp  playground.cpp  playgroundlib.h
docs/: _config.yml  about.md  conversions.md  example_1.md  example_2.md  example_3-1.md  example_3-2.md  example_3.md  example_4.md  index.md  introduction.md  library_usage_from_python.md  polymorphism.md
docs/_posts/: 2020-05-28-welcome-to-jekyll.markdown
docs/assets/css/: style.scss
